fix white space on mobile menu at top of page

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -123,6 +123,6 @@ $color-primary: blueviolet;
     flex-direction: column;
   }
   .container {
-    margin-top: 115px;
+    margin-top: 50px;
   }
 }
